--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 .font-poppins{
   font-family: "Poppins", sans-serif;
   font-style: normal;
+}
+.font-anton{
+      font-family: "Anton", sans-serif;
+      font-style: normal;
+
 }
 
