--- a/styles/style.css
+++ b/styles/style.css
@@ -11,3 +11,8 @@
 
 }
 
+#score{
+  border-radius: 16px;
+border: 1px solid rgba(255, 255, 255, 0.10);
+background: linear-gradient(121deg, rgba(255, 255, 255, 0.56) 0%, rgba(152, 151, 151, 0.00) 102.2%);
+}
